--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <main>
     <section class="hero">
-      <img src="C:\Users\soham\OneDrive\Documents\aVINASH.png">
+      <img src="aVINASH.png">
     </section>
     <!-- Add more sections/content here for the home page -->
   </main>
