--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Aykaa</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-image: url('aVINASH.png'); background-size: cover; background-position: center;">
+<body>
   <header>
     <div class="container">
       <h1>AYKAA COFFEE</h1>
