--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <h1>AYKAA COFFEE</h1>
       <nav>
         <ul>
-          <li><a href="index1.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="https://aykaacoffee.com/index1.html">Home</a></li>
+          <li><a href="https://aykaacoffee.com/about.html">About Us</a></li>
+          <li><a href="https://aykaacoffee.com/contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
