--- a/about.html
+++ b/about.html
@@ -8,6 +8,12 @@
     
   <title>Startup Website - About Us</title>
   <link rel="stylesheet" href="styles.css">
+      <style>
+            body{
+                   background-color: black;
+                    color: white;
+            }
+      </style>
 </head>
 <body background="black" !important>
   <header>
