--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,12 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'">
   <title> Contact Us</title>
   <link rel="stylesheet" href="styles.css">
+     <style>
+            body{
+                   background-color: black;
+                    color: white;
+            }
+      </style>
 </head>
 <body>
   <header>
